# StormScript

./: .gitignore  .gitmodules  .test.sts.swp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  StormScript.sln  StormScriptconfig.h  azure-pipelines.yml  build.sh  builddebug.sh  buildrelease.sh  comlinuxarm.sh  example.sts  files.json  languages.yml  output.txt  package.sh  packagerelease.sh  runtests.sh  stormscript  stsprg.out  test.sh  test.sts  writenewouts.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ccpp.yml
StormScript/: StormScript.cpp  StormScript.vcxproj  StormScript.vcxproj.filters  a.out  compile.cpp  parse.cpp  sts.cpp  stsclasses.h  stsdec.cpp  stsstream.cpp  test.sts  test.stslib
StormScript/Compiled/: stormscript.obj.enc  vc141.idb
api/python/: README.md  build.sh  download.sh  getname.py  reader.cc  reader.txt  test.py  test.stslib
build-scripts/: docs.sts  finished.sts  helloworld.sts  install.sh  installmac.sh  uninstall.sh
classes/: decmethod.cpp  dectype.cpp
core/: errors.cpp  parse.cpp  runlibfunc.cpp  stormscript.cpp  sts.cpp  stsclasses.h
debug/: compilecheck.bat  compilecheck.sh  readme.md
docs/: CONTRIBUTING.md  building.md  readme.md  style.md
docs/changelogs/: changelog-v0.2.0.md  changelog-v0.3.0.md  changelog-v0.4.0.md  changelog-v0.5.0.md  changelog-v0.6.0.md  changelog-v0.7.0.md  changelog-v0.8.0.md  changelog-v1.0.0.md  changelog-v1.1.0.md
docs/development/: style.md  testing.md  the_parser.md
example/: example.sts  examplemod.sts  hello.sts  test.stslib  testmod.sts
examples/: readme.md
examples/helloworld/: hw.sts
examples/helloworldfunc/: hwfunc.sts
examples/loopex/: loopex.sts
examples/newest_ex/: example.sts
interpreter/: exec.cpp  globscope.cpp
lang/: compile.cpp  parse.cpp  readme.md  sts.cpp  stsclasses.h  stsdec.cpp  stsstream.cpp
libraries/: helloworld.stslib  readme.md
libraries/cache/: cache.sh  readme.md
libraries/helloworldlib/: helloworld.cpp  readme.md
libraries/helloworldpy/: helloworldpy.cpp
libraries/helloworldsts/: helloworldsts.stslib
libraries/random/: randomsts.py
libraries/system/: system.py  system.stslib
libraries/tempvar/: readme.md
libraries/webpystormscript/: .gitignore  LICENSE  README.md  requirements.txt  test.sh
libtest/: download.sh  reader.cc
parser/: parse.cpp  read.cpp
release/: package.py  package.sh
release/linux-x86/: install.sh
scripts/: CMakeLists.txt  docs.sts  finished.sts  helloworld.sts  install.sh  packagerelease.sh  runtests.sh  uninstall.sh  writenewouts.sh
snap/: snapcraft.yaml
src/: errors.cc  errors.sts  operations.cc  stormscript.cc  stormscript.h  sts_files.h
stream/: io.cpp  stsstream.cpp
stscompile/: stscomp.cpp
tests/: argtest.sts  builddebug.sh  classmethodtest.sts  classtest.sts  classtypevartest.sts  comptest.sts  comptest2.sts  concattest.sts  constructortest.sts  errortest.sts  example.sts  foreachtest.sts  forlooptest.sts  forwardtest.sts  globalvariables.sts  lengthtest.sts  listforeach.sts  littest.sts  mathtest.sts  modtest.sts  optest.sts  printtest.sts  privatemembers.sts  randomtest.sts  readtest.sts  returntest.sts  settest.sts  stringforeach.sts  test.py  test.sh  whiletest.sts  writetest.sts
values/: getvals.cpp  if.cpp  man.cpp  runfunc.cpp  stsdec.cpp
(+123 files in other folders)
